# 2d-game-dev

./: CMakeLists.txt  README.md  README.txt
Client/: CMakeLists.txt
Client/src/: Action.hpp  Animation.hpp  Assets.hpp  CMakeLists.txt  Entity.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  NetworkManager.cpp  NetworkManager.hpp  Scene.cpp  ScenePlay.cpp  Sprite.hpp  State.hpp  WorldGenerator.hpp  main.cpp
Client/src/character/: Bone.hpp  CMakeLists.txt  SkelAnim.hpp  Skeleton.hpp
Client/src/core/: Action.hpp  Animation.hpp  Assets.hpp  CMakeLists.txt  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.hpp  EntityMemoryPool.cpp  EntityMemoryPool.hpp  GameEngine.cpp  GameEngine.hpp  Scene.cpp  Scene.hpp  SceneMenu.cpp  SceneMenu.hpp  ScenePlay.cpp  ScenePlay.hpp  Sprite.hpp  State.hpp  Texture.hpp
Client/src/network/: CMakeLists.txt  NetworkData.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkSerializer.hpp  Vec2.fbs
Client/src/networking/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.hpp  NetworkSerializer.hpp  Vec2.fbs
Client/src/physics/: CMakeLists.txt  Physics.hpp  Vec2.hpp
Client/src/utility/: CMakeLists.txt  ClientGlobals.hpp  Globals.hpp  Timer.hpp
Client/src/world/: CMakeLists.txt  StructureTypes.hpp  Tile.hpp  TileManager.hpp  TileType.hpp  WorldGenerator.hpp
Global/: EntityBase.hpp  Globals.hpp  NetworkData.hpp  NetworkDatum.hpp  Random.hpp  Timer.hpp
Server/: CMakeLists.txt
Server/src/: Animation.hpp  Assets.hpp  CMakeLists.txt  Components.cpp  Components.hpp  EntityMemoryPool.cpp  EntityMemoryPool.hpp  FastNoiseLite.h  GameEngine.cpp  GameEngine.hpp  Globals.hpp  LobbyEntityManager.hpp  LobbyServer.hpp  MatchmakingServer.hpp  NetEntityManager.hpp  NetworkData.hpp  NetworkManager.cpp  NetworkManager.hpp  Physics.hpp  Scene.cpp  Scene.hpp  SceneMenu.cpp  SceneMenu.hpp  ScenePlay.cpp  ScenePlay.hpp  ServerEngine.cpp  ServerEngine.hpp  ServerGlobals.hpp  StructureTypes.hpp  TileType.hpp  Timer.hpp  Vec2.hpp  main.cpp
src/: Action.hpp  Animation.hpp  Assets.hpp  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.hpp  EntityMemoryPool.cpp  EntityMemoryPool.hpp  GameEngine.cpp  GameEngine.h  GameEngine.hpp  GlobalSettings.hpp  Globals.hpp  NetworkManager.cpp  NetworkManager.hpp  Physics.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneLoad.cpp  SceneLoad.hpp  SceneMenu.cpp  SceneMenu.hpp  ScenePlay.cpp  ScenePlay.hpp  Scene_Menu.cpp  Scene_Menu.h  Scene_Menu.hpp  Scene_Play.cpp  Scene_Play.h  Scene_Play.hpp  Sprite.hpp  State.hpp  StructureTypes.hpp  Tile.hpp  TileManager.hpp  TileType.hpp  Timer.hpp  (+3 more)
